codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Sending feedback is disabled
  This action is disabled by configuration.

› 1. Close

  Press enter to confirm or esc to go back
